# tcc-enem-main

./: .gitignore  dask_tabela.py  dask_teste_normalidade.py  dask_testes_estatisticos.py  main.py  pyproject.toml  relatorio_teste_de_normalidade.txt  resultados_testes_estatisticos.txt  tabela_analise_descritiva_transposta.csv  utils.py
analysis/: clustering_eval.py  data_loader.py  feature_analyzer.py  visualization.py
pages/: gallery_page.py
preprocess/2021/: main.py
preprocess/2022/: main.py
preprocess/2023/: main.py
preprocess/clustering/: custering_models.py
preprocess/generico/: main.py
