[project]
name = "tcc-enem-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.7.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.2.0",
    "scikit-learn>=1.6.1",
    "streamlit-local-storage>=0.0.25",
    "tabulate>=0.9.0",
    "toolz>=1.0.0",
]
